kubernetes/infrastructure/dex/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
