kubernetes/infrastructure/dex/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
  labels:
    app.kubernetes.io/name: dex
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - dex.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: dex
          port: 5556
